--- a/css/layout.css
+++ b/css/layout.css
@@ -1,3 +1,32 @@
 header {
+  width: 960px;
   height: 100px;
+}
+
+#b {
+  width: 200px;
+  height: 600px;
+  float: left;
+}
+
+main div {
+  width: 380px;
+  height: 200px;
+  float: left;
+  display: grid;
+  margin: 0px;
+  padding: 0px;
+}
+
+div {
+  width: 190px;
+  height: 250px;
+ display: inline-block;
+ float: left;
+}
+
+footer {
+  width: 760px;
+  height: 150px;
+  float: left;
 }
