--- a/css/theme.css
+++ b/css/theme.css
@@ -4,16 +4,20 @@ body {
 
 header {
   background-color: rgb(240, 131, 131);
+  /* border: black solid 2px; */
 }
 
-main section {
+main div {
   background-color: blue;
+  /* border: black solid 2px; */
 }
 
-section {
+div {
   background-color: red;
+  /* border: black solid 2px; */
 }
 
 footer {
   background-color: purple;
+  /* border: black solid 2px; */
 }
