--- a/css/layout.css
+++ b/css/layout.css
@@ -1,3 +1,39 @@
+@media screen and (max-width: 768px) {
+
+body {
+  width: 480px;
+  margin: auto;
+}
+
+  header {
+  width: 480px;
+  height: 75px;
+  margin: auto;
+}
+
+main div {
+  width: 480px;
+  height: 125px;
+  margin: auto;
+}
+
+section div {
+  width: 240px;
+  height: 250px;
+  float: left;
+}
+
+}
+
+
+
+
+body {
+  width: 960px;
+  margin: auto;
+}
+
+
 header {
   width: 960px;
   height: 100px;
@@ -14,14 +50,12 @@ main div {
   height: 200px;
   float: left;
   display: grid;
-  margin: 0px;
   padding: 0px;
 }
 
 div {
   width: 190px;
   height: 250px;
- display: inline-block;
  float: left;
 }
 
