--- a/css/layout.css
+++ b/css/layout.css
@@ -1,33 +1,4 @@
-@media screen and (max-width: 768px) {
-
-body {
-  width: 480px;
-  margin: auto;
-}
-
-  header {
-  width: 480px;
-  height: 75px;
-  margin: auto;
-}
-
-main div {
-  width: 480px;
-  height: 125px;
-  margin: auto;
-}
-
-section div {
-  width: 240px;
-  height: 250px;
-  float: left;
-}
-
-}
-
-
-
-
+@media only screen and (min-width:769px) {
 body {
   width: 960px;
   margin: auto;
@@ -43,6 +14,7 @@ header {
   width: 200px;
   height: 600px;
   float: left;
+  
 }
 
 main div {
@@ -56,11 +28,55 @@ main div {
 div {
   width: 190px;
   height: 250px;
- float: left;
+  float: left;
 }
 
 footer {
   width: 760px;
   height: 150px;
   float: left;
+}
+
+}
+
+
+@media only screen and (max-width:768px) {
+
+  body {
+    width: 480px;
+    height: 100%;
+    margin: auto;
+  }
+  
+    header {
+    width: 480px;
+    height: 75px;
+    margin: auto;
+    background-color: black;
+  }
+  
+  main div {
+    width: 480px;
+    height: 125px;
+    margin: auto;
+    background-color: green;
+  }
+  
+  section div {
+    width: 240px;
+    height: 250px;
+    float: left;
+    background-color: grey;
+  }
+  
+  #footer {
+    width: 480px;
+    height: 80px;
+    margin: auto;
+    background-color: indigo;
+    float: left;
+    
+    
+  }
+  
 }
